deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-backend
  template:
    metadata:
      labels:
        app: fraud-backend
    spec:
      containers:
        - name: fraud-detector   # must match CONTAINER_NAME in workflow
          image: cd9a760fdcd945899e13a2db98f7d02d.azurecr.io/fraud-detector:autoencoder
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
