deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-backend
spec:
  selector:
    app: fraud-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
