deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"   # Allow up to 10GB uploads
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: fraud-backend
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: fraud-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
